fix stying on form submit message to align closer to design

--- a/src/components/Form/ContactForm.css
+++ b/src/components/Form/ContactForm.css
@@ -1,11 +1,9 @@
 .succeedSubmit {
-  display: flex;
-  text-align: center;
-  justify-content: center;
+  
+  text-align: left;
   font-size: 2.5rem;
   font-weight: 500;
-  margin: 0 auto;
-  margin-top: -10px;
-  height: 100%;
+  margin-top: -15px;
   align-items: center;
+  padding: 15px 0px;
 }
