--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -35,8 +35,8 @@
 }
 
 .card {
-  min-width: 576px;
-  height: 520px;
+  min-width: 50%;
+  height: 100%;
   padding: 20px 35px 0px 35px;
   background: rgba(81, 103, 155, 0.5);
   border-radius: 20px;
@@ -120,11 +120,17 @@
 
 
 @media screen and (max-width: 946px) {
+
+  .card {
+    min-width: 75%;
+    height: 100%;
+  }
   
   .left-contact-container {
-    width: 100%;
-    align-items: center;  
+    display: block;
+    width: 75%;
     margin-right: 0px;
+    
   }
 
   .contact-header {
@@ -133,7 +139,8 @@
   }
 
   p.contact-text{
-    max-width: 70%;
+    max-width: 100%;
+    
   }
   
 }
@@ -149,15 +156,20 @@
 
 
 @media screen and (max-width: 629px) {
-.card {
-  min-width: 100%;
-  height: 100%;
-}
+
 
 input, textarea {
   width: 100%;
 }
 
+
+}
+
+@media screen and (max-width: 577px) {
+
+  .left-contact-container {
+    width: 90%;
+  }
 
 }
 
